[tool.poetry]
name = "sql-docs"
version = "0.1.0"
description = ""
authors = ["RaymondOnn <raymondonn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"
sqlglot = "^25.29.0"
sql-metadata = "^2.14.0"
erdantic = "^1.0.5"
simple-ddl-parser = "^1.7.1"
polars = "^1.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
